adding more info on interface segragation principle

--- a/_posts/2017-08-16-SOLID.md
+++ b/_posts/2017-08-16-SOLID.md
@@ -1,50 +1,24 @@
 ---
 layout: post
-permalink: solid.html
+permalink: interface_segregation_principle.html
 ---
-
-# S.O.L.I.D
-
-## Why learn this?
-
-I like Apple's theorem, that "there is always a better way" - a nice little thought that can influence your solutions to any problem. 
-As Software Engineers, our solution is going to be a `Software` ..mostly....
-Hence, there is always a better `Software`. Let's make ourselves capable of finding that better one efficiently.
-
-#### Characteristics of a design 
-The engineered design can be intuitive,  simple, specific to a problem or scalable with in that problem domain, stays 
-with in a preferred boundary of the use-case and so forth..and so forth. <br>
-Oh! what does that mean? - "Simple", "intuitive design", "scalability" and "boundary" >>  We will discover the essence
-of these terms fairly quickly.
-
-#### Where do you stand and how do principles help?
-Many a times, you might have already done things that sticks to some formalised principle, which you never thought was something written
-formally in a white paper. Example: if you wrote a function `buyCoffee` without mentioning anything about `chargeCreditCard`, and returns just a cup of `Coffee`, 
-that simply shows your design of `Cafe` probably follows lots of principles already. You could call it, "less dependency", or "purely functional" or "no side effects", 
-or "easy to test"...whatever... </br>
-
-First thing is, realising where you stand even if you don't know these principles in theory. Ask yourself "Have I done such beautiful code by any chance?".
-If you think the answer is "may be" or "yes", or at-least the above cafe problem makes sense to you, that basically shows you have already got the required dots scattered across
-your space of design thinking. The formalised principles that we are going to learn just connects those dots - and that's it! 
- 
-Stories behind, let's understand I of SOLID.
  
 ## Interface Segregation principle.
 
-Let us design a ATM.
-An ATM has transactions. A transaction can be WithdrawalTransaction, DepositTransaction, TransferTransaction etc. Next, 
-we have a UI for ATM, and UI can be Braille UI, Screen UI and Speech UI. Different `transactions`
-can speak to UI methods to publish their message, however, the message might differ based on a transaction.
-If you have a single UI interface having `RequestTransferAmount`, `RequestDepositAmount` that can work with all the types
-of transactions, the problem is kind of solved. And you made it working. But.... what you did is a quick solution, and not a smart solution.
-If you already know of a code smell, that's pretty good!
+We have heard about this design principle in software development. 
+Let's get straight into a problem and try and understand what this principle says!
 
-The problem is, a type of transaction, say DepositTransaction, can enforce a change to UI interface to add a new functionality, which would further lead to
+Let us design a ATM.
+An ATM has transactions. A transaction can be WithdrawalTransaction, DepositTransaction, TransferTransaction etc. 
+Next, we have a UI for ATM, and UI can be Braille UI, Screen UI and Speech UI. 
+Different `transactions` can speak to UI methods to publish their message, however, the message might differ based on a transaction.
+Having a single UI interface having `RequestTransferAmount`, `RequestDepositAmount` that can work with all the types
+wouldn't be the right solution here. It is because, a type of transaction, say DepositTransaction, can enforce a change to UI interface to add a new functionality, which would further lead to
 changes in all the other transactions that extended the same UI. In short our the problem is: 
 
-"A change in UI for solving a problem  with`DepositTransaction` resulted in changes with `TransferTransaction`. Hence, the design doesn't make any sense"
+"A change in UI for solving a problem  with`DepositTransaction` resulted in changes with `TransferTransaction`. 
 
-It seems like we need a UI for Withdraw, Deposit and Transfer.i.e, DepositUI, WithdrawUI and TransferUI. 
+It looks like we need a UI for Withdraw, Deposit and Transfer.i.e, DepositUI, WithdrawUI and TransferUI. 
 
 First stage of Solution: 
 * All Transaction classes extend Transactions as expected. 
@@ -105,7 +79,11 @@ class WithDrawTransaction implements  Transaction {
 
 {% endhighlight %}
 
-You may note that, DepositTransaction must know about DepositUI. Withdraw Transaction must know about WithDrawUI. As you can see,
+This is it!
+
+#### A few more points to note
+
+You may note that, DepositTransaction must know about DepositUI and Withdraw Transaction must know about WithDrawUI. As you can see,
 we solved this problem by making the constructor of each type of transaction expecting the right type of UI. We could pass in the UI
 as given below
 
@@ -118,4 +96,40 @@ class ATM {
    DepositTransaction dt = new DepositTransaction(gui);
 }
 
-{% endhighlight %}
+{% highlight java %}
+
+Another way of handling this problem is to have a global package listing down all types of UIs. i.e, static global objects. Hence we can avoid
+passing in the UI during the construction of different transactions. However, they are two different approaches that allow us to follow 
+Interface Segregation Principle. Please note that if these globals are put into a class instead of a package, that would be violation of the principle as we are in a way
+combining all the interfaces together when we import this class to work with a specified transaction. Personally, I would go with the solution
+given in the above example, that is, pass the right UI to the right transaction.
+
+
+#### The polyad and monad - Monadic is not always the best approach
+Assume that, We might be in need of a function `f` that has to access both DepositUI and
+WithDrawUI. We could separately pass these UIs to f as given below. 
+
+{% highlight java %}
+  
+  f(WithdrawUI, WithdrawUI)
+
+{% highlight java %}
+
+We made the function polyadic, and passed multiple parameters into it. 
+Let me quote a sentence from the book `Clean Code` written by Robert.C.Martin here
+
+> A function with two arguments is harder to understand than a monadic function. For example, writeField(name) is easier to understand than writeField(output-stream, name).
+> Dyads aren't evil, and you will certainly have to write them. However, you should be aware that they come at a cost and should take advantage of what mechanism may be available to you to convert them into monads.
+
+In the above example, you might have noted that we are mixing in various UIs to have a UI type. Following the above quotes
+let us make our function monadic. (You may note that UI in our example is a mix of all interfaces)
+
+{% highlight java %}
+  
+  f(UI)
+
+{% highlight java %}
+
+Here we made it monadic, however it comes with cost - it  drifted us away from following our interface segregation principle. That is, any change in any of the interface affects g and all of its clients
+forcing it to recompile. Hence we prefer polyadic approach here..
+
