removing relative permalink and added titles

--- a/_posts/2017-08-16-SOLID.md
+++ b/_posts/2017-08-16-SOLID.md
@@ -1,10 +1,8 @@
 ---
 layout: post
-permalink: interface_segregation_principle.html
+title: Interface Segregation principle.
 ---
  
-## Interface Segregation principle.
-
 We have heard about this design principle in software development. 
 Let's get straight into a problem and try and understand what this principle says!
 
