relative permalinks and headings

--- a/_posts/2017-08-11-STref.md
+++ b/_posts/2017-08-11-STref.md
@@ -3,8 +3,6 @@ layout: post
 title: State Transformers
 ---
 
-A brief walk through...
-
 ## What is State transformer and STRef trying to achieve?
 
 * Encapsulating stateful computations that manipulate multiple mutable objects in the context of non-strict purely functional language.
@@ -31,7 +29,7 @@ def returnST[S, A](a: => A): ST[S, A] = ...
 * The contents of the state doesn't really matter, but the type is (for what we want to do with ST monad - transform the state by mutating objects in place)
 * Since type S is unique for a given ST, it is going to be a pure function.
 
-# STRef
+#### STRef
 
 STRef is a mutable variable (updatable location in the state capabale of holding a value) that's used only with in the context of ST Monad. And that is, `ST[S, STRef[S, A]]` `` ```
 
@@ -50,7 +48,7 @@ def newVar(a: => A) = returnST(STRef(a))
 
 A simplified version is [here] (<https://github.com/afsalthaj/supaku-sukara/blob/master/src/main/scala/com/thaj/functionalprogramming/exercises/part1/PureStatefulAPIGeneric.scala#L243>)
 
-# Characteristics of STRef in a ST
+#### Characteristics of STRef in a ST
 
 * Playing around with STRef is going to be easy with the availability of monadic combinators. Have a look at the `mod` function as an [example](https://github.com/afsalthaj/supaku-sukara/blob/master/src/main/scala/com/thaj/functionalprogramming/exercises/part1/PureStatefulAPIGeneric.scala#L243).
 * STRef is type parameterized by type S.
@@ -58,14 +56,14 @@ A simplified version is [here] (<https://github.com/afsalthaj/supaku-sukara/blob
 * A single state thread can't oversee other state thread, since they are of incompatible types.
 * Since state transformers are composed sequentially, it's guaranteed that both of them won't mutate the same STRef/mutable-value.
 
-# Taking STRef out of ST ? No....
+#### Taking STRef out of ST ? No....
 
 * You shouldn't separate them.
 * All your changes to the mutable value held by STRef, is done through ST (should be done)
 * You might wonder, providing an initial value for world, and calling the `run` function in ST should be give STRef (that's wrong again)
 * Providing an initial state for World[S], sounds right. Scalaz has its implementation here, where it is `Tower[A]` and providing an `IvoryTower` as its initial value. <https://github.com/scalaz/scalaz/blob/fabab8f699d56279d6f2cc28d02cc2b768e314d7/effect/src/main/scala/scalaz/effect/World.scala> (doesn't really matter)
 
-## So what are we trying to achieve?
+#### So what are we trying to achieve?
 
 Exposing STRef by any chance should lead to compile time error, or in other words no freedom to compose STRef by itself without a State thread.
 
