--- a/_posts/2017-08-16-SOLID.md
+++ b/_posts/2017-08-16-SOLID.md
@@ -94,7 +94,7 @@ class ATM {
    DepositTransaction dt = new DepositTransaction(gui);
 }
 
-{% highlight java %}
+{% endhighlight %}
 
 Another way of handling this problem is to have a global package listing down all types of UIs. i.e, static global objects. Hence we can avoid
 passing in the UI during the construction of different transactions. However, they are two different approaches that allow us to follow 
@@ -111,7 +111,7 @@ WithDrawUI. We could separately pass these UIs to f as given below.
   
   f(WithdrawUI, WithdrawUI)
 
-{% highlight java %}
+{% endhighlight %}
 
 We made the function polyadic, and passed multiple parameters into it. 
 Let me quote a sentence from the book `Clean Code` written by Robert.C.Martin here
@@ -126,7 +126,7 @@ let us make our function monadic. (You may note that UI in our example is a mix 
   
   f(UI)
 
-{% highlight java %}
+{% endhighlight %}
 
 Here we made it monadic, however it comes with cost - it  drifted us away from following our interface segregation principle. That is, any change in any of the interface affects g and all of its clients
 forcing it to recompile. Hence we prefer polyadic approach here..
